--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-vision-camera": "^4.5.2",
+    "react-native-vision-camera-barcodes-scanner": "^2.0.1",
+    "react-native-worklets-core": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,7 +24,7 @@
     "@react-native/eslint-config": "0.74.85",
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.3.23",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
