--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -54,7 +54,7 @@ react {
 /**
  * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = false // Changed from false to false (keep disabled)
 
 /**
  * The preferred build flavor of JavaScriptCore (JSC)
@@ -79,8 +79,9 @@ android {
         applicationId "com.barcodescannerapp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1.0"
+        resValue "string", "app_name", "PDF417 Scanner"
     }
     signingConfigs {
         debug {
@@ -107,7 +108,9 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation project(':react-native-vision-camera') // Ensure this is listed
     implementation project(':react-native-worklets-core')
+    implementation 'com.google.mlkit:barcode-scanning:17.3.0' // <-- Updated ML Kit Barcode Scanning to 17.3.0
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
