--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BarcodeScannerApp",
+  "name": "barcodescannerapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,14 +7,15 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-vision-camera": "^4.5.2",
-    "react-native-vision-camera-barcodes-scanner": "^2.0.1",
-    "react-native-worklets-core": "^1.3.3"
+    "react-native-vision-camera": "^4.5.3",
+    "react-native-worklets-core": "^1.4.0",
+    "vision-camera-cropper": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -29,6 +30,7 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "patch-package": "^8.0.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
